--- a/twig/index.twig
+++ b/twig/index.twig
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="/assets/img/favicon.ico">
+    <link rel="icon" href="assets/img/favicon.ico">
 
     <title>CompUI</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
 </head>
 
@@ -115,11 +115,11 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/assets/bootstrap/js/vendor/jquery-slim.min.js"></script>
-<script src="/assets/bootstrap/js/vendor/popper.min.js"></script>
-<script src="/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="/assets/ace/ace.js"></script>
-<script src="/assets/ace/mode-json.js"></script>
+<script src="assets/bootstrap/js/vendor/jquery-slim.min.js"></script>
+<script src="assets/bootstrap/js/vendor/popper.min.js"></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/ace/ace.js"></script>
+<script src="assets/ace/mode-json.js"></script>
 
 <script>
   var editor = ace.edit("ace");
