--- a/twig/index.twig
+++ b/twig/index.twig
@@ -84,7 +84,7 @@
         <div class="tab-pane fade" id="commands" role="tabpanel" aria-labelledby="commands-tab">
             <div class="row mt-5 mb-5">
                 <div class="col-12">
-                    <form method="post" action="/execute" target="cmdframe">
+                    <form method="post" action="execute" target="cmdframe">
                         <h2>Execute a composer command</h2>
                         <div class="form-group">
                             <label for="selcommand">Command</label>
